Implemented AOT for spring-data-jpa